--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <title>CsStreamScoreboard</title>
   <base href="/">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.5/css/bootstrap.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Saira+Semi+Condensed" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
